traefik_forward_auth/traefik-forward-auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-forward-auth # This is the name of the forward auth service
  namespace: forward-auth # This is the namespace of the forward auth service
spec:
  replicas: 1 # This is the number of replicas of the forward auth service
  selector:
    matchLabels:
      app: github-forward-auth # This is the label of the forward auth service
  template:
    metadata:
      labels:
        app: github-forward-auth # This is the label of the forward auth service
    spec:
      containers:
        - name: github-forward-auth # This is the name of the container
          image: ghcr.io/swe-himelrana/forwardauth:x64 # This is the image of the forward auth service
          imagePullPolicy: Always
          ports:
            - containerPort: 4181 # This is the port of the forward auth service
---
apiVersion: v1
kind: Service
metadata:
  name: github-forward-auth-service # This is the name of the forward auth service
  namespace: forward-auth
spec:
  selector:
    app: github-forward-auth # This is the selector of the forward auth service
  ports:
    - port: 4181 # This is the port of the forward auth service
      targetPort: 4181 # This is the target port of the forward auth service
