traefik_forward_auth/traefik-forward-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: githib-forward-auth-ingress
  namespace: forward-auth
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # This is the cluster issuer of the forward auth service
spec:
  ingressClassName: traefik
  rules:
  - host: auth.web.himelrana.eu.org # This is the host of the forward auth service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: github-forward-auth-service # This is the name of the forward auth service
            port:
              number: 4181
  tls:
  - hosts:
    - auth.web.himelrana.eu.org # This is the host of the forward auth service
    secretName: traefik-forward-auth-tls
